--- a/sofresh/index.html
+++ b/sofresh/index.html
@@ -28,12 +28,14 @@
     </div>
     <div class="card" id="servicecard">
         <h2 id="services">Services</h2>
-        <p>We provide mobile detailing services for cars, trucks, SUVs, farm equpiment, boats, and RVs.  For all your detailing needs, we got you covered.  Click the link below to view all of our services.</p>
+        <p>We provide mobile detailing services for cars, trucks, SUVs, farm equipment, boats, and RVs.  For all your detailing needs, we got you covered.  Click the link below to view all of our services.</p>
         <button id="servicesbtn"><a href="services.html">Learn More</a></button>
     </div>
     <div id="contact" class="card">
         <h2>Contact</h2>
-        <h3>Contact Us @ sofreshsoclean@gmail.com</h3>
+        <h3 class=" contactcard">Contact Us @</h3>
+        <p id="contactemail"><a href="mailto:someone@example.com">Seanisforyou8@gmail.com</a></p>
+        <a href="5414145921" id="contactphone">Phone: 541-414-5921</a>
     </div>
     <script type="text/javascript" src="index.js"></script>
 </body>
