--- a/sofresh/index.html
+++ b/sofresh/index.html
@@ -34,7 +34,7 @@
     <div id="contact" class="card">
         <h2>Contact</h2>
         <h3 class=" contactcard">Contact Us @</h3>
-        <p id="contactemail"><a href="mailto:someone@example.com">Seanisforyou8@gmail.com</a></p>
+        <p id="contactemail"><a href="mailto:Seanisforyou8@gmail.com">Seanisforyou8@gmail.com</a></p>
         <a href="5414145921" id="contactphone">Phone: 541-414-5921</a>
     </div>
     <script type="text/javascript" src="index.js"></script>
