--- a/sofresh/index.html
+++ b/sofresh/index.html
@@ -8,7 +8,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Bowlby+One+SC&display=swap" rel="stylesheet">
 </head>
 <body>
-   
+    <nav>
+        <ul>
+            <li><a>Home</a></li>
+            <li><a>Services</a></li>
+            <li><a>About Us</a></li>
+            <li><a>Contact</a></li>
+        </ul>
+    </nav>
     <div class="showcase">
         <div class="showcasebg"></div>
         <div class="header">
@@ -34,7 +41,7 @@
     <div id="contact" class="card">
         <h2>Contact</h2>
         <h3 class=" contactcard">Contact Us @</h3>
-        <p id="contactemail"><a href="mailto:Seanisforyou8@gmail.com">Seanisforyou8@gmail.com</a></p>
+        <p id="contactemail"><a href="mailto:Seversonisforyou8@gmail.com">Seversonisforyou8@gmail.com</a></p>
         <a href="tel:+15414145921" id="contactphone">Phone: 541-414-5921</a>
     </div>
     <script type="text/javascript" src="index.js"></script>
