--- a/sofresh/gallery.html
+++ b/sofresh/gallery.html
@@ -2,17 +2,26 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>So Fresh So Clean - Gallery</title>
+    <title>Document</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-    <h1>Gallery</h1>
-    <section class="portfolio">
-        <img src="IMG_8310.jpg" >
-        <img src="tractor.jpg" >
-        <img src="truck.jpg" >
-        <img src="boat.jpg" >
-    </section>
+    <div class="container">
+        <div class="main-img">
+          <img src="boat.jpg" id="current">
+        </div>
+      
+        <div class="imgs">
+          <img src="boat.jpg">
+          <img src="IMG_8310.jpg">
+          <img src="tractor.jpg">
+          <img src="truck.jpg">
+          <img src="https://preview.ibb.co/hS5ppG/img5.jpg">
+          <img src="https://preview.ibb.co/goKtGw/img6.jpg">
+          <img src="https://preview.ibb.co/bSWjOb/img7.jpg">
+          <img src="https://preview.ibb.co/i2o9pG/img8.jpg">
+        </div>
+      </div>
+      <script type="text/javascript" src="index.js"></script>
 </body>
 </html>
