--- a/gallery.html
+++ b/gallery.html
@@ -32,10 +32,19 @@
             <img src="IMG_8310.jpg">
             <img src="tractor.jpg">
             <img src="truck.jpg">
-            <img src="https://preview.ibb.co/hS5ppG/img5.jpg">
-            <img src="https://preview.ibb.co/goKtGw/img6.jpg">
-            <img src="https://preview.ibb.co/bSWjOb/img7.jpg">
-            <img src="https://preview.ibb.co/i2o9pG/img8.jpg">
+            
+            <img src="IMG_2009.jpg">
+            <img src="IMG_2010.jpg">
+            <img src="IMG_2011.jpg">
+            <img src="IMG_2012.jpg">
+            <img src="IMG_2013.jpg">
+            <img src="IMG_2016.jpg">
+            <img src="IMG_2017.jpg">
+            <img src="IMG_2018.jpg">
+            <img src="IMG_2019.jpg">
+            <img src="IMG_2020.jpg">
+            <img src="IMG_20200803_121424.jpg">
+            <img src="IMG_20200803_121429.jpg">
           </div>
         </div>
         <script type="text/javascript" src="index.js"></script>
