--- a/index.html
+++ b/index.html
@@ -36,9 +36,7 @@
     <div class="card">
         <h2 id="about">About Our Company</h2>
         <p>
-           So Fresh So Clean mobile auto detailing provides vehicle detailing solutions for vehicles of all sizes, and types to the Rogue Valley.
-           We strive to provide excellence through fast, friendly, and professional service.  Our mission is to make your car look, smell, and feel fresh to keep you rolling in style.
-           We come to you!  Take a look at our services, and prices below.  Contact us to make an appointment today!
+          Our mission is to consistently provide professional quality service and accommodating services to our clients. We provide full detailing, interior, and exterior services. We live up to our company name SoFreshNSoClean. We go to our customers houses or work place to make sure your 100% satisfied! All vehicles, boats, motorcycles, Rv’s, tractors, bus’s we detail Inside and out!!! “You name it WE DETAIL IT”!
         </p>
     </div>
     <div class="card" id="servicecard">
