--- a/services.html
+++ b/services.html
@@ -27,52 +27,71 @@
         <div class="carsbg"></div>
         <h2>Car/Truck/SUV</h2>
         <ul>
-            <li>Waxing - $50</li>
-            <li>Vaccuming - $25</li>
-            <li>Ozone Treatment - $75</li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li class="underline"><b>Wash & Spray Wax - $40</b></li>
+            <li class="underline"><b>Buffeting & Wax with full detail - $130
+                Includes:</b></li>
+                         <li>Vaccuming with pet hair removal.</li>
+                          <li>Carpet shampooing & Stain removal.</li>
+                          <li>Stain protection.</li>
+                          <li>Windows.</li>
+                          <li>Rims & Tires.</li>
+            <li class="underline">Scrath Removal - Price varies based on severity</li>
+            <li class="underline">Headlight Restoration - $50</li>
+            <li class="underline">Water Oxidation Removal - Price varies</li>
+            <li class="underline">Grease Removal & Engine Bay Cleaning - Price varies</li>
         </ul>
     </div>
     <div class="cars">
         <div class="boatsbg"></div>
         <h2>Boats</h2>
         <ul>
-            <li>Waxing - $50</li>
-            <li>Vaccuming - $25</li>
-            <li>Ozone Treatment - $75</li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li class="underline"><b>Wash & Spray Wax - $40</b></li>
+            <li class="underline"><b>Buffeting & Wax with full detail - $130
+                Includes:</b></li>
+                         <li>Vaccuming with pet hair removal.</li>
+                          <li>Carpet shampooing & Stain removal.</li>
+                          <li>Stain protection.</li>
+                          <li>Windows.</li>
+            <li class="underline">Scrath Removal - Price varies based on severity</li>
+            <li class="underline">Headlight Restoration - $50</li>
+            <li class="underline">Water Oxidation Removal - Price varies</li>
+            <li class="underline">Grease Removal & Engine Bay Cleaning - Price varies</li>
         </ul>
     </div>
     <div class="cars">
         <div class="RVbg"></div>
         <h2>RVs</h2>
         <ul>
-            <li>Waxing - $50</li>
-            <li>Vaccuming - $25</li>
-            <li>Ozone Treatment - $75</li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li class="underline"><b>Wash & Spray Wax - $40</b></li>
+            <li class="underline"><b>Buffeting & Wax with full detail - $130
+                Includes:</b></li>
+                         <li>Vaccuming with pet hair removal.</li>
+                          <li>Carpet shampooing & Stain removal.</li>
+                          <li>Stain protection.</li>
+                          <li>Windows.</li>
+                          <li>Rims & Tires.</li>
+            <li class="underline">Scrath Removal - Price varies based on severity</li>
+            <li class="underline">Headlight Restoration - $50</li>
+            <li class="underline">Water Oxidation Removal - Price varies</li>
+            <li class="underline">Grease Removal & Engine Bay Cleaning - Price varies</li>
         </ul>
     </div>
     <div class="cars">
         <div class="farmequipment"></div>
         <h2>Farm/Heavy equipment</h2>
         <ul>
-            <li>Waxing - $50</li>
-            <li>Vaccuming - $25</li>
-            <li>Ozone Treatment - $75</li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li class="underline"><b>Wash & Spray Wax - $40</b></li>
+            <li class="underline"><b>Buffeting & Wax with full detail - $130
+                Includes:</b></li>
+                         <li>Vaccuming with pet hair removal.</li>
+                          <li>Carpet shampooing & Stain removal.</li>
+                          <li>Stain protection.</li>
+                          <li>Windows.</li>
+                          <li>Rims & Tires.</li>
+            <li class="underline">Scrath Removal - Price varies based on severity</li>
+            <li class="underline">Headlight Restoration - $50</li>
+            <li class="underline">Water Oxidation Removal - Price varies</li>
+            <li class="underline">Grease Removal & Engine Bay Cleaning - Price varies</li>
         </ul>
     </div>
 </body>
