--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div id="contact" class="card">
         <h2>Contact</h2>
         <h3 class=" contactcard">Contact Us @</h3>
-        <p id="contactemail"><a href="mailto:Seversonisforyou8@gmail.com">Seversonisforyou8@gmail.com</a></p>
+        <p id="contactemail"><a href="mailto:Seversonisforu8@gmail.com">Seversonisforu8@gmail.com</a></p>
         <a href="tel:+15414145921" id="contactphone">Phone: 541-414-5921</a>
     </div>
     <script type="text/javascript" src="index.js"></script>
